--- a/DefectClassification.GUI/App.axaml
+++ b/DefectClassification.GUI/App.axaml
@@ -1,4 +1,4 @@
-<Application xmlns="https://github.com/avaloniaui"
+﻿<Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="DefectClassification.GUI.App"
              xmlns:local="using:DefectClassification.GUI"
@@ -11,5 +11,9 @@
   
     <Application.Styles>
         <FluentTheme />
+            <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml"/>
+
     </Application.Styles>
+
+
 </Application>
